# verifiable-labs-envs

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  conftest.py  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  verifiable-eval-example.yml
analysis/: correlation_analysis.py  failure_taxonomy.py  finding_reconciliation.py  plot_correlation.py  plot_multiturn.py  plot_v2_heatmap.py
benchmarks/: run_all.py  run_llm_benchmark.py  run_meta_benchmark_v3.py  run_mri_knee_v1.py  run_multiturn_benchmark.py  run_phase_retrieval_v1.py  run_tools_benchmark.py  run_tools_v2_rebench.py  run_v2_benchmark.py
deploy/api/: Dockerfile  README.md  docker-compose.yml  fly.toml  render.yaml
docs/: BLOCKERS.md  CONTAMINATION.md  CUSTOM_ENVIRONMENTS.md  LEADERBOARD.md  METHODOLOGY.md  ONBOARD_AGENT_5_MIN.md  PRIME_INTELLECT.md  PRIME_INTELLECT_VERIFICATION.md  SPRINT_1_COMPLETE.md  SPRINT_1_POLISH_REPORT.md  SPRINT_GIGA_COMPLETE.md  conformal.md  env1_sparse_fourier_design.md  index.md  quickstart.md
docs/api-reference/: cli.md  python-sdk.md  rest-api.md
docs/company/: contact.md  roadmap.md
docs/concepts/: conformal-rewards.md  multi-turn.md  procedural-regeneration.md  tool-use.md
environments/lodopab_ct_simplified_multiturn/: README.md  lodopab_ct_simplified_multiturn.py  pyproject.toml
environments/lodopab_ct_simplified_multiturn/.prime/: .env-metadata.json
environments/mri_knee_reconstruction_multiturn/: README.md  mri_knee_reconstruction_multiturn.py  pyproject.toml
environments/mri_knee_reconstruction_multiturn/.prime/: .env-metadata.json
environments/sparse_fourier_recovery/: README.md  pyproject.toml  sparse_fourier_recovery.py
environments/sparse_fourier_recovery/.prime/: .env-metadata.json
environments/sparse_fourier_recovery_tools/: README.md  pyproject.toml  sparse_fourier_recovery_tools.py
environments/sparse_fourier_recovery_tools/.prime/: .env-metadata.json
examples/: quickstart.py  training_signal_demo.py
leaderboard/: app.py  requirements.txt
notebooks/: README.md  build_training_proof_ipynb.py  training_proof.ipynb  training_proof_lib.py  training_proof_run.py
paper/: AUDIT_REPORT.md  README.md  main.tex  references.bib
reports/: final_smoke.md  zero_smoke.md
results/: benchmark_v2_summary.md  complete_matrix_multi_turn.csv  complete_matrix_single_turn.csv  coverage_validation.csv  coverage_validation_n200.csv  ct_real_spotcheck.csv  env_correlation_matrix.csv  failure_taxonomy.csv  llm_benchmark.csv  llm_benchmark.md  llm_benchmark_tools_v2.csv  memorization_probe.csv  meta_benchmark_v3.csv  meta_benchmark_v3_summary.md  mri_knee_v1_benchmark.csv  multiturn_lodopab_ct_simplified_multiturn.csv  multiturn_sparse_fourier_recovery_multiturn.csv  opus_nano_fill_v2.csv  phase_retrieval_v1_benchmark.csv  sparse_fourier_reconciliation.md  stat_tests.csv  stat_tests_comprehensive.csv  tools_sparse_fourier_recovery_tools.csv  tools_v2_complete.csv  training_proof.csv  training_proof_smoke.csv  training_proof_smoke_summary.json  training_proof_summary.json  training_signal_demo.csv  training_signal_demo.md
runs/: final_smoke.jsonl  random_smoke.jsonl  zero_smoke.jsonl
scripts/: coverage_validation.py  create_env.py  download_lodopab_validation.sh  generate_packages.py  generate_report.py  memorization_probe.py  merge_leaderboard_data.py  populate_prime_envs.py  statistical_tests.py  validate_env.py
services/api/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  PHASE_16_PLAN.md  README.md  RUNBOOK.md  SESSION_LOG.md  alembic.ini  docker-compose.yml  pyproject.toml
services/api/deploy/: .dockerignore  Dockerfile  entrypoint.sh  first-deploy.sh  fly.toml
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_initial.py  0002_stripe_events.py
services/api/scripts/: create_stripe_products.py
services/api/src/vlabs_api/: __init__.py  auth.py  billing.py  calibration.py  clerk_auth.py  config.py  db.py  errors.py  ids.py  main.py  ratelimit.py  redis_client.py  schemas.py  usage.py
services/api/src/vlabs_api/jobs/: __init__.py  reconcile_overage.py
services/api/src/vlabs_api/routes/: __init__.py  admin.py  audit.py  billing.py  calibrate.py  evaluate.py  health.py  keys.py  predict.py  usage.py  webhook.py
services/api/tests/: conftest.py  test_admin.py  test_audit.py  test_auth.py  test_billing.py  test_calibrate.py  test_evaluate.py  test_health.py  test_keys.py  test_predict.py  test_ratelimit.py  test_usage.py  test_webhook.py
templates/inverse-problem/template/: README.md  conftest.py  pyproject.toml
templates/inverse-problem/template/__ENV_PY__/: __init__.py  adapter.py  data.py  env.py  forward_op.py  reward.py
templates/inverse-problem/template/tests/: test_adapter.py  test_env.py  test_reward.py
tests/: test_calibration.py  test_conformal.py  test_forward_ops.py  test_forward_ops_abstract.py  test_llm_adapters.py  test_llm_solver.py  test_lodopab_ct.py  test_lodopab_ct_multiturn.py  test_mri_knee.py  test_phase_retrieval.py  test_registry.py  test_reproducibility.py  test_sparse_fourier.py  test_sparse_fourier_multiturn.py  test_sparse_fourier_tools.py  test_super_resolution.py  test_timeout.py
tools/vlabs-audit/: .gitignore  PHASE_17_PLAN.md  README.md  SESSION_LOG.md  pyproject.toml
tools/vlabs-audit/configs/: sample.yaml
tools/vlabs-audit/src/vlabs_audit/: __init__.py  anonymize.py  cli.py  config.py  figures.py  latex.py  runner.py  stats.py  storage.py
tools/vlabs-audit/templates/: main.tex.j2
tools/vlabs-audit/templates/sections/: appendix.tex.j2  exec_summary.tex.j2  methodology.tex.j2  recommendations.tex.j2  results.tex.j2
tools/vlabs-audit/templates/style/: vlabs_report.cls
tools/vlabs-audit/tests/: conftest.py  test_anonymize.py  test_cli.py  test_config.py  test_figures.py  test_latex.py  test_runner.py  test_stats.py  test_storage.py
tools/vlabs-audit/tests/fixtures/: expected_sections.txt
(+207 files in other folders)
