[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "verifiable-labs-envs"
version = "0.0.1"
description = "Reinforcement-learning environments for scientific reasoning: physics-grounded inverse problems with uncertainty-calibrated rewards."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Stelios Zacharioudakis" }]
keywords = ["reinforcement-learning", "inverse-problems", "rlvr", "evaluation", "scientific-ml", "conformal-prediction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "scikit-image>=0.22",
    "datasets>=2.20",
    "pillow>=10.0",
    "tqdm>=4.66",
    "openai>=1.50",
    "python-dotenv>=1.0",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
baselines = [
    "torch>=2.3",
]

[project.urls]
Homepage = "https://github.com/verifiable-labs/envs"
Issues = "https://github.com/verifiable-labs/envs/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/verifiable_labs_envs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
