[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "verifiable-labs-envs"
version = "0.1.0a1"
description = "Reinforcement-learning environments for scientific reasoning: physics-grounded inverse problems with uncertainty-calibrated rewards."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Stelios Zacharioudakis" }]
keywords = ["reinforcement-learning", "inverse-problems", "rlvr", "evaluation", "scientific-ml", "conformal-prediction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "scikit-image>=0.22",
    "datasets>=2.20",
    "pillow>=10.0",
    "tqdm>=4.66",
    "openai>=1.50",
    "python-dotenv>=1.0",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23", # SDK has async tests in packages/verifiable-labs/tests
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",         # FastAPI test client uses httpx under the hood
    "respx>=0.21",         # SDK test suite mocks httpx via respx
]
baselines = [
    "torch>=2.3",
]
ct-real = [
    # dival 0.6.2 requires the pre-1.0 odl API (odl.phantom.*). A companion
    # setuptools pin is needed for odl 0.8.x which still uses pkg_resources.
    "dival>=0.6.2",
    "odl>=0.7,<1.0",
    "setuptools<70",
    "h5py>=3.10",
]
api = [
    # Hosted Evaluation API — Tier 1 Task 1 (v0.1.0-alpha).
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "slowapi>=0.1.9",
    "structlog>=24.1",
]
docs = [
    # mkdocs site — Tier 1 Task 6.
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/stelioszach03/verifiable-labs-envs"
Issues = "https://github.com/stelioszach03/verifiable-labs-envs/issues"

[project.scripts]
# Developer CLI — see src/verifiable_labs_envs/cli.py.
# Funding-sprint Tier-1.5 (YC + Neo).
verifiable = "verifiable_labs_envs.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/verifiable_labs_envs", "src/verifiable_labs_api"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "packages/verifiable-labs/tests",
    "packages/vlabs-calibrate/tests",
    "services/api/tests",
    "tools/vlabs-audit/tests",
]
# --import-mode=importlib: required so multiple `tests/__init__.py` packages
# (one per packages/* sub-package) don't collide on pytest's prepend importer.
# See https://docs.pytest.org/en/stable/explanation/pythonpath.html#import-modes
addopts = "-q --strict-markers --import-mode=importlib"
asyncio_mode = "auto"
# services/api uses session-scoped DB + ASGI client fixtures; the
# asyncio loop scope must match so function-scoped tests can await on
# session-scoped engine/sessions without "got Future attached to a
# different loop" errors. The other tests in the repo are predominantly
# sync; a session loop is harmless for them.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: SDK tests that spin up a real uvicorn instance",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    # Inverse-problem env scaffold; placeholder tokens (__ENV_PY__ etc.)
    # are substituted by scripts/create_env.py and aren't valid Python
    # in their pre-render state.
    "templates/inverse-problem/template",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
