[project]
name = "lodopab-ct-simplified-multiturn"
description = "3-turn CT reconstruction with FBP-domain residual feedback."
tags = ["scientific-reasoning", "inverse-problems", "rlvr", "conformal", "eval"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.13",
    "verifiable-labs-envs @ git+https://github.com/stelioszach03/verifiable-labs-envs.git@main",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# The monorepo isn't on PyPI yet, so the verifiable-labs-envs dep is a
# Git URL. Hatchling refuses direct references by default; this flag
# whitelists them so the wheel can build.
allow-direct-references = true

[tool.hatch.build]
include = ["lodopab_ct_simplified_multiturn.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
