[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "verifiable-labs-__ENV_ID__"
version = "0.1.0-alpha"
description = "Verifiable Labs scientific RL env: __ENV_ID__ (__DOMAIN__)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "TODO: your name", email = "todo@example.com" }]
keywords = [
    "reinforcement-learning",
    "scientific-ml",
    "rlvr",
    "inverse-problems",
    "__DOMAIN_TAG__",
    "verifiable-labs",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    # TODO: add domain-specific deps (e.g. scikit-image, h5py, pyscf, ...).
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.entry-points."verifiers.environments"]
# Lets `verifiers.load_environment("__ENV_ID__")` discover this env.
__ENV_ID__ = "__ENV_PY__:load_environment"

[tool.hatch.build.targets.wheel]
packages = ["__ENV_PY__"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
